Added csv for many datasets

--- a/Correlates_of_war.ipynb
+++ b/Correlates_of_war.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "4      CUB     40                      Cuba"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,11 +173,228 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WarNum</th>\n",
+       "      <th>WarName</th>\n",
+       "      <th>WarType</th>\n",
+       "      <th>ccode</th>\n",
+       "      <th>StateName</th>\n",
+       "      <th>Side</th>\n",
+       "      <th>StartMonth1</th>\n",
+       "      <th>StartDay1</th>\n",
+       "      <th>StartYear1</th>\n",
+       "      <th>EndMonth1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>EndMonth2</th>\n",
+       "      <th>EndDay2</th>\n",
+       "      <th>EndYear2</th>\n",
+       "      <th>TransFrom</th>\n",
+       "      <th>WhereFought</th>\n",
+       "      <th>Initiator</th>\n",
+       "      <th>Outcome</th>\n",
+       "      <th>TransTo</th>\n",
+       "      <th>BatDeath</th>\n",
+       "      <th>Version</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Franco-Spanish War</td>\n",
+       "      <td>1</td>\n",
+       "      <td>230</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1823</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>503</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>600</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Franco-Spanish War</td>\n",
+       "      <td>1</td>\n",
+       "      <td>220</td>\n",
+       "      <td>France</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1823</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>503</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>400</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>First Russo-Turkish</td>\n",
+       "      <td>1</td>\n",
+       "      <td>640</td>\n",
+       "      <td>Ottoman Empire</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1828</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>506</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>First Russo-Turkish</td>\n",
+       "      <td>1</td>\n",
+       "      <td>365</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1828</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>506</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Mexican-American</td>\n",
+       "      <td>1</td>\n",
+       "      <td>70</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1846</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-8</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   WarNum              WarName  WarType  ccode       StateName  Side  \\\n",
+       "0       1   Franco-Spanish War        1    230           Spain     2   \n",
+       "1       1   Franco-Spanish War        1    220          France     1   \n",
+       "2       4  First Russo-Turkish        1    640  Ottoman Empire     2   \n",
+       "3       4  First Russo-Turkish        1    365          Russia     1   \n",
+       "4       7     Mexican-American        1     70          Mexico     2   \n",
+       "\n",
+       "   StartMonth1  StartDay1  StartYear1  EndMonth1  ...  EndMonth2  EndDay2  \\\n",
+       "0            4          7        1823         11  ...         -8       -8   \n",
+       "1            4          7        1823         11  ...         -8       -8   \n",
+       "2            4         26        1828          9  ...         -8       -8   \n",
+       "3            4         26        1828          9  ...         -8       -8   \n",
+       "4            4         25        1846          9  ...         -8       -8   \n",
+       "\n",
+       "   EndYear2  TransFrom  WhereFought  Initiator  Outcome  TransTo BatDeath  \\\n",
+       "0        -8        503            2          2        2       -8      600   \n",
+       "1        -8        503            2          1        1       -8      400   \n",
+       "2        -8        506           11          2        2       -8    80000   \n",
+       "3        -8        506           11          1        1       -8    50000   \n",
+       "4        -8         -8            1          2        2       -8     6000   \n",
+       "\n",
+       "   Version  \n",
+       "0        4  \n",
+       "1        4  \n",
+       "2        4  \n",
+       "3        4  \n",
+       "4        4  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Inter_StateWarData = pd.read_csv(\"Inter-StateWarData_v4.0.csv\")\n",
+    "Inter_StateWarData.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "&#9989; **Example 1.0**: Important code from Days 10&11 Graph Theory\n"
+    "# PAST USEFUL CODE FOR GRAPH THEORY\n",
+    "&#9989; **Example 9.9**: Important code from Days 10&11 Graph Theory\n"
    ]
   },
   {
