--- a/Correlates_of_war.ipynb
+++ b/Correlates_of_war.ipynb
@@ -14,10 +14,10 @@
     "\n",
     "</p>\n",
     "\n",
-    "1. [don't die](#ai)\n",
-    "1. [Do it](#github)\n",
-    "1. [See if this works](#groupwork)\n",
-    "1. [Test and cry](#projectplanning)\n",
+    "1. [don't die](#COWCountryCodes)\n",
+    "1. [Do it](#InterStateWarData)\n",
+    "1. [See if this works](#AlliancesData)\n",
+    "1. [Test and cry](#ReligionData)\n",
     "1. [Project work time](#projectwork)"
    ]
   },
@@ -75,18 +75,20 @@
    "metadata": {},
    "source": [
     "---\n",
-    "<a id=\"ai\"></a>\n",
+    "<a id=\"COWCountryCodes\"></a>\n",
     "## 1. COW Country Codes\n",
     "\n",
     "[1] CSV with country codes that will be referenced frequently in COW data.  Will be synonymous with Nodes (Countries)\n",
     "\n",
-    "> 1. **Subtext:** this is subtext."
+    "> 1. \"The list of states with COW abbreviations and ID numbers.\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -170,6 +172,19 @@
     "\n",
     "Country_Codes = pd.read_csv(\"COW-country-codes.csv\")\n",
     "Country_Codes.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id=\"InterStateWarData\"></a>\n",
+    "## 2. Inter State War Data\n",
+    "\n",
+    "[1] CSV with war data war IDs ccodes start finish\n",
+    "\n",
+    "> 1. Gibler, Douglas M. 2009. International military alliances, 1648-2008. CQ Press.  "
    ]
   },
   {
@@ -388,6 +403,445 @@
     "Inter_StateWarData = pd.read_csv(\"Inter-StateWarData_v4.0.csv\")\n",
     "Inter_StateWarData.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id=\"AlliancesData\"></a>\n",
+    "## 3. Alliances Data\n",
+    "\n",
+    "[1] CSV with military alliances\n",
+    "\n",
+    "> 1. Gibler, Douglas M. 2009. International military alliances, 1648-2008. CQ Press.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>version4id</th>\n",
+       "      <th>ccode1</th>\n",
+       "      <th>state_name1</th>\n",
+       "      <th>ccode2</th>\n",
+       "      <th>state_name2</th>\n",
+       "      <th>dyad_st_day</th>\n",
+       "      <th>dyad_st_month</th>\n",
+       "      <th>dyad_st_year</th>\n",
+       "      <th>dyad_end_day</th>\n",
+       "      <th>dyad_end_month</th>\n",
+       "      <th>dyad_end_year</th>\n",
+       "      <th>left_censor</th>\n",
+       "      <th>right_censor</th>\n",
+       "      <th>defense</th>\n",
+       "      <th>neutrality</th>\n",
+       "      <th>nonaggression</th>\n",
+       "      <th>entente</th>\n",
+       "      <th>version</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>200</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>235</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1816</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>235</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>200</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1816</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>200</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>380</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1816</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1911.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>380</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>200</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1816</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1911.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>240</td>\n",
+       "      <td>Hanover</td>\n",
+       "      <td>245</td>\n",
+       "      <td>Bavaria</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1838</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1848.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   version4id  ccode1     state_name1  ccode2     state_name2  dyad_st_day  \\\n",
+       "0           1     200  United Kingdom     235        Portugal            1   \n",
+       "1           1     235        Portugal     200  United Kingdom            1   \n",
+       "2           2     200  United Kingdom     380          Sweden            1   \n",
+       "3           2     380          Sweden     200  United Kingdom            1   \n",
+       "4           3     240         Hanover     245         Bavaria            1   \n",
+       "\n",
+       "   dyad_st_month  dyad_st_year  dyad_end_day  dyad_end_month  dyad_end_year  \\\n",
+       "0              1          1816           NaN             NaN            NaN   \n",
+       "1              1          1816           NaN             NaN            NaN   \n",
+       "2              1          1816          15.0             2.0         1911.0   \n",
+       "3              1          1816          15.0             2.0         1911.0   \n",
+       "4              1          1838          15.0             3.0         1848.0   \n",
+       "\n",
+       "   left_censor  right_censor  defense  neutrality  nonaggression  entente  \\\n",
+       "0            1             1        1           0            1.0      0.0   \n",
+       "1            1             1        1           0            1.0      0.0   \n",
+       "2            1             0        0           0            0.0      1.0   \n",
+       "3            1             0        0           0            0.0      1.0   \n",
+       "4            0             0        1           0            1.0      1.0   \n",
+       "\n",
+       "   version  \n",
+       "0      4.1  \n",
+       "1      4.1  \n",
+       "2      4.1  \n",
+       "3      4.1  \n",
+       "4      4.1  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Alliances = pd.read_csv(\"alliance_v4.1_by_directed.csv\")\n",
+    "Alliances.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "<a id=\"ReligionData\"></a>\n",
+    "## 4. Religion Data\n",
+    "\n",
+    "[1] CSV with country Religion data\n",
+    "\n",
+    "> 1. Zeev Maoz and Errol A. Henderson. 2013. “The World Religion Dataset, 1945-2010: Logic, Estimates, and Trends.” International Interactions, 39: 265-291."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>state</th>\n",
+       "      <th>name</th>\n",
+       "      <th>chrstprot</th>\n",
+       "      <th>chrstcat</th>\n",
+       "      <th>chrstorth</th>\n",
+       "      <th>chrstang</th>\n",
+       "      <th>chrstothr</th>\n",
+       "      <th>chrstgen</th>\n",
+       "      <th>judorth</th>\n",
+       "      <th>...</th>\n",
+       "      <th>othrgenpct</th>\n",
+       "      <th>sumreligpct</th>\n",
+       "      <th>total</th>\n",
+       "      <th>dualrelig</th>\n",
+       "      <th>datatype</th>\n",
+       "      <th>sourcereliab</th>\n",
+       "      <th>recreliab</th>\n",
+       "      <th>reliabilevel</th>\n",
+       "      <th>Version</th>\n",
+       "      <th>sourcecode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1945</td>\n",
+       "      <td>2</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>66069671</td>\n",
+       "      <td>38716742</td>\n",
+       "      <td>1121898</td>\n",
+       "      <td>2400000</td>\n",
+       "      <td>1956807</td>\n",
+       "      <td>110265118</td>\n",
+       "      <td>821489</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0039</td>\n",
+       "      <td>0.9961</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1950</td>\n",
+       "      <td>2</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>73090083</td>\n",
+       "      <td>42635882</td>\n",
+       "      <td>3045420</td>\n",
+       "      <td>3045420</td>\n",
+       "      <td>1177214</td>\n",
+       "      <td>122994019</td>\n",
+       "      <td>1078078</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0041</td>\n",
+       "      <td>0.9959</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>6</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1955</td>\n",
+       "      <td>2</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>79294628</td>\n",
+       "      <td>46402368</td>\n",
+       "      <td>3454916</td>\n",
+       "      <td>2572767</td>\n",
+       "      <td>2277091</td>\n",
+       "      <td>134001770</td>\n",
+       "      <td>944000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0193</td>\n",
+       "      <td>0.9807</td>\n",
+       "      <td>0.9999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>134</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>2</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>90692928</td>\n",
+       "      <td>50587880</td>\n",
+       "      <td>3334535</td>\n",
+       "      <td>2710065</td>\n",
+       "      <td>2908939</td>\n",
+       "      <td>150234347</td>\n",
+       "      <td>973500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0076</td>\n",
+       "      <td>0.9924</td>\n",
+       "      <td>0.9999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>134</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1965</td>\n",
+       "      <td>2</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>94165803</td>\n",
+       "      <td>64761783</td>\n",
+       "      <td>4792868</td>\n",
+       "      <td>2822149</td>\n",
+       "      <td>973155</td>\n",
+       "      <td>167515758</td>\n",
+       "      <td>991200</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0030</td>\n",
+       "      <td>0.9970</td>\n",
+       "      <td>1.0001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>134</td>\n",
+       "      <td>8</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 84 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  state name  chrstprot  chrstcat  chrstorth  chrstang  chrstothr  \\\n",
+       "0  1945      2  USA   66069671  38716742    1121898   2400000    1956807   \n",
+       "1  1950      2  USA   73090083  42635882    3045420   3045420    1177214   \n",
+       "2  1955      2  USA   79294628  46402368    3454916   2572767    2277091   \n",
+       "3  1960      2  USA   90692928  50587880    3334535   2710065    2908939   \n",
+       "4  1965      2  USA   94165803  64761783    4792868   2822149     973155   \n",
+       "\n",
+       "    chrstgen  judorth  ...  othrgenpct  sumreligpct   total  dualrelig  \\\n",
+       "0  110265118   821489  ...      0.0039       0.9961  1.0000          0   \n",
+       "1  122994019  1078078  ...      0.0041       0.9959  1.0000          0   \n",
+       "2  134001770   944000  ...      0.0193       0.9807  0.9999          0   \n",
+       "3  150234347   973500  ...      0.0076       0.9924  0.9999          0   \n",
+       "4  167515758   991200  ...      0.0030       0.9970  1.0001          0   \n",
+       "\n",
+       "   datatype  sourcereliab  recreliab  reliabilevel  Version  sourcecode  \n",
+       "0        34             2         10        Medium      1.1          13  \n",
+       "1        34             6         28           Low      1.1          18  \n",
+       "2       134             5         10        Medium      1.1          15  \n",
+       "3       134             2         10        Medium      1.1          13  \n",
+       "4       134             8         28           Low      1.1          20  \n",
+       "\n",
+       "[5 rows x 84 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Religions = pd.read_csv(\"WRP_national.csv\")\n",
+    "Religions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
