changes to CorrWar

--- a/Correlates_of_war.ipynb
+++ b/Correlates_of_war.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,20 +421,92 @@
     "    import pandas as pd\n",
     "\n",
     "    # Example URLs (replace these with the actual file URLs)\n",
-    "    country_codes_url = 'https://example.com/CountryCodes_LatLong.csv'\n",
-    "    alliances_url = 'https://example.com/alliance_v4.1_by_directed.csv'\n",
-    "    wars_url = 'https://github.com/Burkey3072/war-machine/blob/main/Inter-StateWarData_v4.0.csv' \n",
+    "    #country_codes_url = 'https://example.com/CountryCodes_LatLong.csv'\n",
+    "    alliances_url = 'https://raw.githubusercontent.com/Burkey3072/war-machine/refs/heads/main/alliance_v4.1_by_directed.csv?token=GHSAT0AAAAAACXBGU4ZAX6ELCTLZM4AHC3MZZWHDNQ'\n",
+    "    wars_url = 'https://raw.githubusercontent.com/Burkey3072/war-machine/refs/heads/main/Inter-StateWarData_v4.0.csv?token=GHSAT0AAAAAACXBGU4YTL5IK5CORJZTX6WIZZWHDWA' \n",
     "    \n",
     "    # Load the CSV files into DataFrames\n",
-    "    Country_Codes = pd.read_csv(country_codes_url)\n",
+    "    #Country_Codes = pd.read_csv(country_codes_url)\n",
     "    Alliances = pd.read_csv(alliances_url)\n",
     "    Inter_StateWarData = pd.read_csv(wars_url)\n",
     "\n",
     "    # Display the first few rows of each DataFrame\n",
-    "    print(Country_Codes.head())\n",
+    "    #print(Country_Codes.head())\n",
     "    print(Alliances.head())\n",
     "    print(Inter_StateWarData.head())\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   version4id  ccode1     state_name1  ccode2     state_name2  dyad_st_day  \\\n",
+      "0           1     200  United Kingdom     235        Portugal            1   \n",
+      "1           1     235        Portugal     200  United Kingdom            1   \n",
+      "2           2     200  United Kingdom     380          Sweden            1   \n",
+      "3           2     380          Sweden     200  United Kingdom            1   \n",
+      "4           3     240         Hanover     245         Bavaria            1   \n",
+      "\n",
+      "   dyad_st_month  dyad_st_year  dyad_end_day  dyad_end_month  dyad_end_year  \\\n",
+      "0              1          1816           NaN             NaN            NaN   \n",
+      "1              1          1816           NaN             NaN            NaN   \n",
+      "2              1          1816          15.0             2.0         1911.0   \n",
+      "3              1          1816          15.0             2.0         1911.0   \n",
+      "4              1          1838          15.0             3.0         1848.0   \n",
+      "\n",
+      "   left_censor  right_censor  defense  neutrality  nonaggression  entente  \\\n",
+      "0            1             1        1           0            1.0      0.0   \n",
+      "1            1             1        1           0            1.0      0.0   \n",
+      "2            1             0        0           0            0.0      1.0   \n",
+      "3            1             0        0           0            0.0      1.0   \n",
+      "4            0             0        1           0            1.0      1.0   \n",
+      "\n",
+      "   version  \n",
+      "0      4.1  \n",
+      "1      4.1  \n",
+      "2      4.1  \n",
+      "3      4.1  \n",
+      "4      4.1  \n",
+      "   WarNum              WarName  WarType  ccode       StateName  Side  \\\n",
+      "0       1   Franco-Spanish War        1    230           Spain     2   \n",
+      "1       1   Franco-Spanish War        1    220          France     1   \n",
+      "2       4  First Russo-Turkish        1    640  Ottoman Empire     2   \n",
+      "3       4  First Russo-Turkish        1    365          Russia     1   \n",
+      "4       7     Mexican-American        1     70          Mexico     2   \n",
+      "\n",
+      "   StartMonth1  StartDay1  StartYear1  EndMonth1  ...  EndMonth2  EndDay2  \\\n",
+      "0            4          7        1823         11  ...         -8       -8   \n",
+      "1            4          7        1823         11  ...         -8       -8   \n",
+      "2            4         26        1828          9  ...         -8       -8   \n",
+      "3            4         26        1828          9  ...         -8       -8   \n",
+      "4            4         25        1846          9  ...         -8       -8   \n",
+      "\n",
+      "   EndYear2  TransFrom  WhereFought  Initiator  Outcome  TransTo BatDeath  \\\n",
+      "0        -8        503            2          2        2       -8      600   \n",
+      "1        -8        503            2          1        1       -8      400   \n",
+      "2        -8        506           11          2        2       -8    80000   \n",
+      "3        -8        506           11          1        1       -8    50000   \n",
+      "4        -8         -8            1          2        2       -8     6000   \n",
+      "\n",
+      "   Version  \n",
+      "0        4  \n",
+      "1        4  \n",
+      "2        4  \n",
+      "3        4  \n",
+      "4        4  \n",
+      "\n",
+      "[5 rows x 25 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "load_data()"
    ]
   },
   {
