Load data should work now

--- a/Correlates_of_war.ipynb
+++ b/Correlates_of_war.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,17 +421,17 @@
     "    import pandas as pd\n",
     "\n",
     "    # Example URLs (replace these with the actual file URLs)\n",
-    "    #country_codes_url = 'https://example.com/CountryCodes_LatLong.csv'\n",
-    "    alliances_url = 'https://raw.githubusercontent.com/Burkey3072/war-machine/refs/heads/main/alliance_v4.1_by_directed.csv?token=GHSAT0AAAAAACXBGU4ZAX6ELCTLZM4AHC3MZZWHDNQ'\n",
-    "    wars_url = 'https://raw.githubusercontent.com/Burkey3072/war-machine/refs/heads/main/Inter-StateWarData_v4.0.csv?token=GHSAT0AAAAAACXBGU4YTL5IK5CORJZTX6WIZZWHDWA' \n",
+    "    country_codes_url = 'https://raw.githubusercontent.com/Burkey3072/war-machine/refs/heads/main/CountryCodes_LatLong.csv?token=GHSAT0AAAAAACXBGU4YQ4LYROVOV5YVYAL2ZZWHIFA'\n",
+    "    alliances_url = 'https://raw.githubusercontent.com/Burkey3072/war-machine/refs/heads/main/alliance_v4.1_by_directed.csv?token=GHSAT0AAAAAACXBGU4YCXLRT3EZEVIAORUMZZWHJDQ'\n",
+    "    wars_url = 'https://raw.githubusercontent.com/Burkey3072/war-machine/refs/heads/main/Inter-StateWarData_v4.0.csv?token=GHSAT0AAAAAACXBGU4YTT45TLZ2WHLIF4HWZZWHJOQ' \n",
     "    \n",
     "    # Load the CSV files into DataFrames\n",
-    "    #Country_Codes = pd.read_csv(country_codes_url)\n",
+    "    Country_Codes = pd.read_csv(country_codes_url)\n",
     "    Alliances = pd.read_csv(alliances_url)\n",
     "    Inter_StateWarData = pd.read_csv(wars_url)\n",
     "\n",
     "    # Display the first few rows of each DataFrame\n",
-    "    #print(Country_Codes.head())\n",
+    "    print(Country_Codes.head())\n",
     "    print(Alliances.head())\n",
     "    print(Inter_StateWarData.head())\n",
     "\n"
@@ -439,13 +439,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "  StateAbb  CCode                  StateNme   latitude   longitude\n",
+      "0      USA      2  United States of America  37.090240  -95.712891\n",
+      "1      CAN     20                    Canada  56.130366 -106.346771\n",
+      "2      BHM     31                   Bahamas  25.034280  -77.396280\n",
+      "3      CUB     40                      Cuba  21.521757  -77.781167\n",
+      "4      HAI     41                     Haiti  18.971187  -72.285215\n",
       "   version4id  ccode1     state_name1  ccode2     state_name2  dyad_st_day  \\\n",
       "0           1     200  United Kingdom     235        Portugal            1   \n",
       "1           1     235        Portugal     200  United Kingdom            1   \n",
