started making animations.  open for suggestions

--- a/Correlates_of_war.ipynb
+++ b/Correlates_of_war.ipynb
@@ -413,106 +413,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_data():\n",
     "    import pandas as pd\n",
+    "    import networkx as nx\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import itertools\n",
+    "    from datetime import datetime, timedelta\n",
+    "    from matplotlib.animation import FuncAnimation\n",
     "\n",
-    "    # Example URLs (replace these with the actual file URLs)\n",
+    "    # URLS\n",
     "    country_codes_url = 'https://raw.githubusercontent.com/Burkey3072/war-machine/refs/heads/main/CountryCodes_LatLong.csv?token=GHSAT0AAAAAACXBGU4YQ4LYROVOV5YVYAL2ZZWHIFA'\n",
     "    alliances_url = 'https://raw.githubusercontent.com/Burkey3072/war-machine/refs/heads/main/alliance_v4.1_by_directed.csv?token=GHSAT0AAAAAACXBGU4YCXLRT3EZEVIAORUMZZWHJDQ'\n",
     "    wars_url = 'https://raw.githubusercontent.com/Burkey3072/war-machine/refs/heads/main/Inter-StateWarData_v4.0.csv?token=GHSAT0AAAAAACXBGU4YTT45TLZ2WHLIF4HWZZWHJOQ' \n",
     "    \n",
-    "    # Load the CSV files into DataFrames\n",
-    "    Country_Codes = pd.read_csv(country_codes_url)\n",
-    "    Alliances = pd.read_csv(alliances_url)\n",
-    "    Inter_StateWarData = pd.read_csv(wars_url)\n",
+    "    # # Load the CSV files into DataFrames\n",
+    "    # Country_Codes = pd.read_csv(country_codes_url)\n",
+    "    # Alliances = pd.read_csv(alliances_url)\n",
+    "    # Inter_StateWarData = pd.read_csv(wars_url)\n",
     "\n",
-    "    # Display the first few rows of each DataFrame\n",
-    "    print(Country_Codes.head())\n",
-    "    print(Alliances.head())\n",
-    "    print(Inter_StateWarData.head())\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  StateAbb  CCode                  StateNme   latitude   longitude\n",
-      "0      USA      2  United States of America  37.090240  -95.712891\n",
-      "1      CAN     20                    Canada  56.130366 -106.346771\n",
-      "2      BHM     31                   Bahamas  25.034280  -77.396280\n",
-      "3      CUB     40                      Cuba  21.521757  -77.781167\n",
-      "4      HAI     41                     Haiti  18.971187  -72.285215\n",
-      "   version4id  ccode1     state_name1  ccode2     state_name2  dyad_st_day  \\\n",
-      "0           1     200  United Kingdom     235        Portugal            1   \n",
-      "1           1     235        Portugal     200  United Kingdom            1   \n",
-      "2           2     200  United Kingdom     380          Sweden            1   \n",
-      "3           2     380          Sweden     200  United Kingdom            1   \n",
-      "4           3     240         Hanover     245         Bavaria            1   \n",
-      "\n",
-      "   dyad_st_month  dyad_st_year  dyad_end_day  dyad_end_month  dyad_end_year  \\\n",
-      "0              1          1816           NaN             NaN            NaN   \n",
-      "1              1          1816           NaN             NaN            NaN   \n",
-      "2              1          1816          15.0             2.0         1911.0   \n",
-      "3              1          1816          15.0             2.0         1911.0   \n",
-      "4              1          1838          15.0             3.0         1848.0   \n",
-      "\n",
-      "   left_censor  right_censor  defense  neutrality  nonaggression  entente  \\\n",
-      "0            1             1        1           0            1.0      0.0   \n",
-      "1            1             1        1           0            1.0      0.0   \n",
-      "2            1             0        0           0            0.0      1.0   \n",
-      "3            1             0        0           0            0.0      1.0   \n",
-      "4            0             0        1           0            1.0      1.0   \n",
-      "\n",
-      "   version  \n",
-      "0      4.1  \n",
-      "1      4.1  \n",
-      "2      4.1  \n",
-      "3      4.1  \n",
-      "4      4.1  \n",
-      "   WarNum              WarName  WarType  ccode       StateName  Side  \\\n",
-      "0       1   Franco-Spanish War        1    230           Spain     2   \n",
-      "1       1   Franco-Spanish War        1    220          France     1   \n",
-      "2       4  First Russo-Turkish        1    640  Ottoman Empire     2   \n",
-      "3       4  First Russo-Turkish        1    365          Russia     1   \n",
-      "4       7     Mexican-American        1     70          Mexico     2   \n",
-      "\n",
-      "   StartMonth1  StartDay1  StartYear1  EndMonth1  ...  EndMonth2  EndDay2  \\\n",
-      "0            4          7        1823         11  ...         -8       -8   \n",
-      "1            4          7        1823         11  ...         -8       -8   \n",
-      "2            4         26        1828          9  ...         -8       -8   \n",
-      "3            4         26        1828          9  ...         -8       -8   \n",
-      "4            4         25        1846          9  ...         -8       -8   \n",
-      "\n",
-      "   EndYear2  TransFrom  WhereFought  Initiator  Outcome  TransTo BatDeath  \\\n",
-      "0        -8        503            2          2        2       -8      600   \n",
-      "1        -8        503            2          1        1       -8      400   \n",
-      "2        -8        506           11          2        2       -8    80000   \n",
-      "3        -8        506           11          1        1       -8    50000   \n",
-      "4        -8         -8            1          2        2       -8     6000   \n",
-      "\n",
-      "   Version  \n",
-      "0        4  \n",
-      "1        4  \n",
-      "2        4  \n",
-      "3        4  \n",
-      "4        4  \n",
-      "\n",
-      "[5 rows x 25 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "load_data()"
+    "    Country_Codes = pd.read_csv(\"CountryCodes_LatLong.csv\")\n",
+    "    Inter_StateWarData = pd.read_csv(\"Inter-StateWarData_v4.0.csv\")\n",
+    "    Alliances = pd.read_csv(\"alliance_v4.1_by_directed.csv\")\n",
+    "    Religions = pd.read_csv(\"WRP_national.csv\")\n",
+    "\n",
+    "    # # Display the first few rows of each DataFrame\n",
+    "    # print(Country_Codes.head())\n",
+    "    # print(Alliances.head())\n",
+    "    # print(Inter_StateWarData.head())\n",
+    "    # print(Religions.head())\n",
+    "\n",
+    "    return Country_Codes , Inter_StateWarData , Alliances , Religions\n",
+    "\n",
+    "Country_Codes , Inter_StateWarData , Alliances , Religions = load_data()"
    ]
   },
   {
@@ -537,8 +473,19 @@
     "\n",
     "    return G\n",
     "\n",
-    "def graph_country_nodes(G):\n",
+    "def is_date_in_range(date, start_year, start_month, start_day, end_year, end_month, end_day):\n",
+    "    from datetime import datetime\n",
+    "    # Handle missing end dates by setting them to a far future date\n",
+    "    start_date = datetime(int(start_year), int(start_month), int(start_day) )\n",
+    "    end_date = datetime(int(end_year), int(end_month), int(end_day) ) if pd.notna(end_year) else datetime(9999, 12, 31)\n",
+    "    return start_date <= date <= end_date\n",
     "\n",
+    "def graph_country_nodes(G):\n",
+    "    import networkx as nx\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    positions = nx.get_node_attributes(G, 'pos')\n",
+    "    labels = nx.get_node_attributes(G, 'label')\n",
+    "    \n",
     "    # Plot the graph\n",
     "    plt.figure(figsize=(20, 10))\n",
     "    nx.draw(\n",
@@ -556,35 +503,13 @@
     "    plt.title('Territories as Nodes by Latitude and Longitude', fontsize=14)\n",
     "    plt.show()\n",
     "\n",
-    "G = set_country_nodes()\n",
-    "graph_country_nodes(G)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def is_date_in_range(date, start_year, start_month, start_day, end_year, end_month, end_day):\n",
-    "    # Handle missing end dates by setting them to a far future date\n",
-    "    start_date = datetime(int(start_year), int(start_month), int(start_day) )\n",
-    "    end_date = datetime(int(end_year), int(end_month), int(end_day) ) if pd.notna(end_year) else datetime(9999, 12, 31)\n",
-    "    return start_date <= date <= end_date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def graph_alliances(G,date, data = Alliances):\n",
+    "    from datetime import datetime\n",
+    "    import networkx as nx\n",
+    "    import matplotlib.pyplot as plt\n",
     "    \n",
     "    for _, row in data.iterrows():\n",
     "    \n",
-    "\n",
-    "\n",
     "        if ( is_date_in_range(date, row['dyad_st_year'], row['dyad_st_month'], row['dyad_st_day'],\n",
     "                              row['dyad_end_year'], row['dyad_end_month'], row['dyad_end_day']) ) :\n",
     "\n",
@@ -596,24 +521,11 @@
     "            #G.get_edge_data(row['ccode1'], row['ccode2'])\n",
     "\n",
     "            G.add_edge(row['ccode1'], row['ccode2'])\n",
-    "            \n",
-    "    # # Plot the graph\n",
-    "    # plt.figure(figsize=(20, 10))\n",
-    "    # nx.draw(\n",
-    "    #     G,\n",
-    "    #     pos=nx.get_node_attributes(G, 'pos'),  # Use updated positions\n",
-    "    #     with_labels=True,\n",
-    "    #     labels=nx.get_node_attributes(G, 'label'),\n",
-    "    #     node_size=400,\n",
-    "    #     node_color='skyblue',\n",
-    "    #     edgecolors='black',\n",
-    "    #     edge_color='black',\n",
-    "    #     font_size=8\n",
-    "    # )\n",
-    "    # plt.title('Dynamic Edges by Date', fontsize=14)\n",
-    "    # plt.show()\n",
-    "    # print(f\"Graph has {G.number_of_nodes()} nodes and {G.number_of_edges()} edges\")\n",
     "\n",
+    "    # Extract positions and labels for plotting\n",
+    "    positions = nx.get_node_attributes(G, 'pos')\n",
+    "    labels = nx.get_node_attributes(G, 'label')\n",
+    "            \n",
     "    return G\n"
    ]
   },
@@ -624,9 +536,15 @@
    "outputs": [],
    "source": [
     "def graph_wars(G,date, data = Inter_StateWarData):\n",
-    "\n",
+    "    import networkx as nx\n",
+    "    import matplotlib.pyplot as plt\n",
     "    import itertools\n",
+    "    from datetime import datetime\n",
     "\n",
+    "    # Extract positions and labels for plotting\n",
+    "    positions = nx.get_node_attributes(G, 'pos')\n",
+    "    labels = nx.get_node_attributes(G, 'label')\n",
+    "    \n",
     "    # Assuming your DataFrame (e.g., WarData) has 'ccode' and 'WarNum' columns\n",
     "    # Group nodes by 'WarNum'\n",
     "    war_groups = data.groupby('WarNum')['ccode']\n",
@@ -654,22 +572,22 @@
     "#         if node1.size > 0 and node2.size > 0:\n",
     "#             G.add_edge(node1[0], node2[0])\n",
     "\n",
-    "    # Plot the updated graph\n",
-    "    plt.figure(figsize=(12, 8))\n",
-    "    nx.draw(\n",
-    "        G,\n",
-    "        pos=positions,  # Assuming positions is defined\n",
-    "        with_labels=True,\n",
-    "        node_size=300,\n",
-    "        node_color='skyblue',\n",
-    "        edgecolors='black',\n",
-    "        font_size=8,\n",
-    "        edge_color='red'\n",
-    "    )\n",
-    "    plt.title('Graph with Edges Added for Common WarNum', fontsize=14)\n",
-    "    plt.show()\n",
+    "    # # Plot the updated graph\n",
+    "    # plt.figure(figsize=(12, 8))\n",
+    "    # nx.draw(\n",
+    "    #     G,\n",
+    "    #     pos=positions,  # Assuming positions is defined\n",
+    "    #     with_labels=True,\n",
+    "    #     node_size=300,\n",
+    "    #     node_color='skyblue',\n",
+    "    #     edgecolors='black',\n",
+    "    #     font_size=8,\n",
+    "    #     edge_color='red'\n",
+    "    # )\n",
+    "    # plt.title('Graph with Edges Added for Common WarNum', fontsize=14)\n",
+    "    # plt.show()\n",
     "\n",
-    "    print(f\"Graph has {G.number_of_nodes()} nodes and {G.number_of_edges()} edges\")\n",
+    "    # print(f\"Graph has {G.number_of_nodes()} nodes and {G.number_of_edges()} edges\")\n",
     "\n",
     "    "
    ]
@@ -680,8 +598,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import itertools\n",
+    "from datetime import datetime, timedelta\n",
+    "from matplotlib.animation import FuncAnimation\n",
+    "\n",
+    "Country_Codes , Inter_StateWarData , Alliances , Religions = load_data()\n",
+    "date = datetime(1860,8, 6) \n",
     "G = set_country_nodes()\n",
-    "graph_wars(G,date)"
+    "graph_alliances(G,date, data = Alliances)\n",
+    "graph_country_nodes(G)"
    ]
   },
   {
@@ -690,10 +618,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date = datetime(1860,8, 6) \n",
     "G = set_country_nodes()\n",
-    "graph_alliances(G,date, data = Alliances)\n",
+    "graph_wars(G,date)\n",
     "graph_country_nodes(G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "range (Alliances['dyad_st_year'].min(), Alliances['dyad_st_year'].max() )\n",
+    "global date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import itertools\n",
+    "from datetime import datetime, timedelta\n",
+    "from matplotlib.animation import FuncAnimation\n",
+    "\n",
+    "# Assume load_data(), set_country_nodes(), graph_alliances(), and graph_country_nodes() are defined\n",
+    "Country_Codes, Inter_StateWarData, Alliances, Religions = load_data()\n",
+    "\n",
+    "\n",
+    "# Initialize the graph\n",
+    "G = set_country_nodes()\n",
+    "\n",
+    "# Function to increment the date by one month\n",
+    "def increment_month(date):\n",
+    "    if date.month == 12:\n",
+    "        return datetime(date.year + 1, 1, 1)\n",
+    "    else:\n",
+    "        return datetime(date.year, date.month + 1, 1)\n",
+    "\n",
+    "# Initialize the plot\n",
+    "fig, ax = plt.subplots(figsize=(10, 8))\n",
+    "\n",
+    "# Update function for each frame of the animation\n",
+    "def update(frame):\n",
+    "    \n",
+    "    ax.clear()\n",
+    "    \n",
+    "    # Increment the date by one month\n",
+    "    global date\n",
+    "    date = increment_month(date)\n",
+    "    \n",
+    "    # Update the graph\n",
+    "    #G.clear()  # Clear current graph\n",
+    "    G = set_country_nodes()  # Reset country nodes\n",
+    "    graph_alliances(G, date, data=Alliances)  # Graph alliances based on current date\n",
+    "    graph_country_nodes(G)  # Draw country nodes\n",
+    "\n",
+    "    # Title showing the current date\n",
+    "    ax.set_title(f'Network at {date.strftime(\"%B %Y\")}', fontsize=14)\n",
+    "\n",
+    "# Start date and animation setup\n",
+    "date = datetime(1816, 1, 1)\n",
+    "ani = FuncAnimation(fig, update, frames=50, interval=100, repeat=False)  # 196 * 12 months\n",
+    "\n",
+    "# Save or show the animation\n",
+    "#plt.show()  # To display interactively\n",
+    "#ani.save('network_animation.mp4', fps=10)  # To save as a video\n"
    ]
   },
   {
@@ -707,6 +701,111 @@
     "[1] Goofy ah graphs\n",
     "\n",
     "> 1. Burke"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "from datetime import datetime\n",
+    "from matplotlib.animation import FuncAnimation\n",
+    "\n",
+    "# Assume load_data(), set_country_nodes(), graph_alliances(), and graph_country_nodes() are defined\n",
+    "Country_Codes, Inter_StateWarData, Alliances, Religions = load_data()\n",
+    "\n",
+    "# Initialize the graph\n",
+    "G = set_country_nodes()\n",
+    "\n",
+    "# Function to increment the date by one year\n",
+    "def increment_year(date):\n",
+    "    return datetime(date.year + 1, date.month, date.day)\n",
+    "\n",
+    "# Initialize the plot\n",
+    "fig, ax = plt.subplots(figsize=(10, 8))\n",
+    "\n",
+    "# Update function for each frame of the animation\n",
+    "def update(frame):\n",
+    "    ax.clear()\n",
+    "    \n",
+    "    # Increment the date by one year\n",
+    "    global date\n",
+    "    date = increment_year(date)\n",
+    "    \n",
+    "    # Update the graph\n",
+    "    #G.clear()  # Clear current graph\n",
+    "    G = set_country_nodes()  # Reset country nodes\n",
+    "    graph_alliances(G, date, data=Alliances)  # Graph alliances based on current date\n",
+    "    graph_country_nodes(G)  # Draw country nodes\n",
+    "    \n",
+    "    # # Draw the updated graph\n",
+    "    # pos = nx.spring_layout(G)  # Example layout, can customize\n",
+    "    # nx.draw(\n",
+    "    #     G, \n",
+    "    #     pos, \n",
+    "    #     ax=ax, \n",
+    "    #     with_labels=True, \n",
+    "    #     node_size=300, \n",
+    "    #     node_color='skyblue', \n",
+    "    #     edge_color='gray',\n",
+    "    #     font_size=8\n",
+    "    # )\n",
+    "    \n",
+    "    # Title showing the current date\n",
+    "    ax.set_title(f'Network at {date.strftime(\"%Y\")}', fontsize=14)\n",
+    "\n",
+    "# Start date and animation setup\n",
+    "date = datetime(1816, 1, 1)\n",
+    "total_years = 2012 - 1816 + 1  # Total number of years (197 years)\n",
+    "ani = FuncAnimation(fig, update, frames=total_years, interval=500, repeat=False)  # One frame per year\n",
+    "\n",
+    "# Save or show the animation\n",
+    "#plt.show()  # To display interactively\n",
+    "ani.save('network_animation_years2.mp4', fps=10)  # To save as a video\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_alliances(G, date, data=Alliances):\n",
+    "    for _, row in data.iterrows():\n",
+    "        if is_date_in_range(date, row['dyad_st_year'], row['dyad_st_month'], row['dyad_st_day'],\n",
+    "                            row['dyad_end_year'], row['dyad_end_month'], row['dyad_end_day']):\n",
+    "            if row['ccode1'] in G.nodes and row['ccode2'] in G.nodes:\n",
+    "                G.add_edge(row['ccode1'], row['ccode2'])\n",
+    "\n",
+    "\n",
+    "def animate(frame, G, data, start_date, ax):\n",
+    "    ax.clear()\n",
+    "    date = start_date + timedelta(days=frame)\n",
+    "    update_alliances(G, date, data)\n",
+    "    positions = nx.get_node_attributes(G, 'pos')\n",
+    "    labels = nx.get_node_attributes(G, 'label')\n",
+    "    nx.draw(\n",
+    "        G, pos=positions, ax=ax, with_labels=True, labels=labels,\n",
+    "        node_size=200, node_color='skyblue', edgecolors='black', font_size=6\n",
+    "    )\n",
+    "    ax.set_title(f\"Graph as of {date.strftime('%Y-%m-%d')}\", fontsize=14)\n",
+    "\n",
+    "# Load data\n",
+    "Country_Codes, Inter_StateWarData, Alliances, Religions = load_data()\n",
+    "\n",
+    "# Create initial graph\n",
+    "G = set_country_nodes(Country_Codes)\n",
+    "\n",
+    "# Animation setup\n",
+    "fig, ax = plt.subplots(figsize=(20, 10))\n",
+    "start_date = datetime(1860, 1, 1)\n",
+    "ani = FuncAnimation(fig, animate, frames=365, interval=200, repeat=False, fargs=(G, Alliances, start_date, ax))\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
