--- a/Correlates_of_war.ipynb
+++ b/Correlates_of_war.ipynb
@@ -85,11 +85,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>StateAbb</th>\n",
+       "      <th>CCode</th>\n",
+       "      <th>StateNme</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>2</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>37.090240</td>\n",
+       "      <td>-95.712891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CAN</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>56.130366</td>\n",
+       "      <td>-106.346771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BHM</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Bahamas</td>\n",
+       "      <td>25.034280</td>\n",
+       "      <td>-77.396280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CUB</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Cuba</td>\n",
+       "      <td>21.521757</td>\n",
+       "      <td>-77.781167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HAI</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Haiti</td>\n",
+       "      <td>18.971187</td>\n",
+       "      <td>-72.285215</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  StateAbb  CCode                  StateNme   latitude   longitude\n",
+       "0      USA      2  United States of America  37.090240  -95.712891\n",
+       "1      CAN     20                    Canada  56.130366 -106.346771\n",
+       "2      BHM     31                   Bahamas  25.034280  -77.396280\n",
+       "3      CUB     40                      Cuba  21.521757  -77.781167\n",
+       "4      HAI     41                     Haiti  18.971187  -72.285215"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -160,13 +247,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "Religions = pd.read_csv(\"WRP_national.csv\")\n",
+    "Religions = pd.read_csv(\"WRP_national.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>state</th>\n",
+       "      <th>name</th>\n",
+       "      <th>chrstprot</th>\n",
+       "      <th>chrstcat</th>\n",
+       "      <th>chrstorth</th>\n",
+       "      <th>chrstang</th>\n",
+       "      <th>chrstothr</th>\n",
+       "      <th>chrstgen</th>\n",
+       "      <th>judorth</th>\n",
+       "      <th>...</th>\n",
+       "      <th>sumreligpct</th>\n",
+       "      <th>total</th>\n",
+       "      <th>dualrelig</th>\n",
+       "      <th>datatype</th>\n",
+       "      <th>sourcereliab</th>\n",
+       "      <th>recreliab</th>\n",
+       "      <th>reliabilevel</th>\n",
+       "      <th>Version</th>\n",
+       "      <th>sourcecode</th>\n",
+       "      <th>CCode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1945</td>\n",
+       "      <td>2</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>66069671</td>\n",
+       "      <td>38716742</td>\n",
+       "      <td>1121898</td>\n",
+       "      <td>2400000</td>\n",
+       "      <td>1956807</td>\n",
+       "      <td>110265118</td>\n",
+       "      <td>821489</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.9961</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1950</td>\n",
+       "      <td>2</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>73090083</td>\n",
+       "      <td>42635882</td>\n",
+       "      <td>3045420</td>\n",
+       "      <td>3045420</td>\n",
+       "      <td>1177214</td>\n",
+       "      <td>122994019</td>\n",
+       "      <td>1078078</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.9959</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>6</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1955</td>\n",
+       "      <td>2</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>79294628</td>\n",
+       "      <td>46402368</td>\n",
+       "      <td>3454916</td>\n",
+       "      <td>2572767</td>\n",
+       "      <td>2277091</td>\n",
+       "      <td>134001770</td>\n",
+       "      <td>944000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.9807</td>\n",
+       "      <td>0.9999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>134</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1960</td>\n",
+       "      <td>2</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>90692928</td>\n",
+       "      <td>50587880</td>\n",
+       "      <td>3334535</td>\n",
+       "      <td>2710065</td>\n",
+       "      <td>2908939</td>\n",
+       "      <td>150234347</td>\n",
+       "      <td>973500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.9924</td>\n",
+       "      <td>0.9999</td>\n",
+       "      <td>0</td>\n",
+       "      <td>134</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1965</td>\n",
+       "      <td>2</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>94165803</td>\n",
+       "      <td>64761783</td>\n",
+       "      <td>4792868</td>\n",
+       "      <td>2822149</td>\n",
+       "      <td>973155</td>\n",
+       "      <td>167515758</td>\n",
+       "      <td>991200</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.9970</td>\n",
+       "      <td>1.0001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>134</td>\n",
+       "      <td>8</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 85 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  state name  chrstprot  chrstcat  chrstorth  chrstang  chrstothr  \\\n",
+       "0  1945      2  USA   66069671  38716742    1121898   2400000    1956807   \n",
+       "1  1950      2  USA   73090083  42635882    3045420   3045420    1177214   \n",
+       "2  1955      2  USA   79294628  46402368    3454916   2572767    2277091   \n",
+       "3  1960      2  USA   90692928  50587880    3334535   2710065    2908939   \n",
+       "4  1965      2  USA   94165803  64761783    4792868   2822149     973155   \n",
+       "\n",
+       "    chrstgen  judorth  ...  sumreligpct   total  dualrelig  datatype  \\\n",
+       "0  110265118   821489  ...       0.9961  1.0000          0        34   \n",
+       "1  122994019  1078078  ...       0.9959  1.0000          0        34   \n",
+       "2  134001770   944000  ...       0.9807  0.9999          0       134   \n",
+       "3  150234347   973500  ...       0.9924  0.9999          0       134   \n",
+       "4  167515758   991200  ...       0.9970  1.0001          0       134   \n",
+       "\n",
+       "   sourcereliab  recreliab  reliabilevel  Version  sourcecode  CCode  \n",
+       "0             2         10        Medium      1.1          13      2  \n",
+       "1             6         28           Low      1.1          18      2  \n",
+       "2             5         10        Medium      1.1          15      2  \n",
+       "3             2         10        Medium      1.1          13      2  \n",
+       "4             8         28           Low      1.1          20      2  \n",
+       "\n",
+       "[5 rows x 85 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "merged_df = Religions.merge(Country_Codes[['StateAbb', 'CCode']], left_on='name', right_on='StateAbb', how='left')\n",
+    "merged_df.drop(columns=['StateAbb'], inplace=True)\n",
+    "\n",
+    "merged_df.to_csv('WRP_national_with_CCode.csv', index=False)\n",
+    "Religions = merged_df\n",
+    "\n",
     "Religions.head()"
    ]
   },
@@ -624,6 +926,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "<a id=\"Animate\"></a>\n",
+    "## Burke Trying to animate shit\n",
+    "\n",
+    "[1] It go move but not move yet\n",
+    "\n",
+    "> 1. Burke"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -691,19 +1006,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "-----\n",
-    "<a id=\"Extra\"></a>\n",
-    "## Extra Maybe weird graphs\n",
-    "\n",
-    "[1] Goofy ah graphs\n",
-    "\n",
-    "> 1. Burke"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -765,7 +1067,7 @@
     "\n",
     "# Save or show the animation\n",
     "#plt.show()  # To display interactively\n",
-    "ani.save('network_animation_years2.mp4', fps=10)  # To save as a video\n"
+    "#ani.save('network_animation_years2.mp4', fps=10)  # To save as a video\n"
    ]
   },
   {
@@ -806,6 +1108,19 @@
     "ani = FuncAnimation(fig, animate, frames=365, interval=200, repeat=False, fargs=(G, Alliances, start_date, ax))\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----\n",
+    "<a id=\"Extra\"></a>\n",
+    "## Extra Maybe weird graphs\n",
+    "\n",
+    "[1] Goofy ah graphs\n",
+    "\n",
+    "> 1. Burke"
    ]
   },
   {
@@ -1321,6 +1636,35 @@
    "source": [
     "&#169; Copyright 2023, Department of Computational Mathematics, Science and Engineering at Michigan State University"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poop = 5\n",
+    "pee = 2\n",
+    "poop + pee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
